--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,44 +1,97 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
-
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
-
-    </head>
-    <body>
-
-        <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </div>
-
-          {{ content }}
-
-          <div class="footer">
-            <div class="contact">
-              <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
-              </p>
-            </div>
-          </div>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Project-FiFo Documentation{% if page.title }%} - {{page.title}}{% endif %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!-- Le styles -->
+    <link href="/assets/css/bootstrap.css" rel="stylesheet">
+    <style>
+      body { padding-top: 60px; /* 60px to make the container go all the way
+      to the bottom of the topbar */ }
+    </style>
+    <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/assets/css/docs.css" rel="stylesheet">
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+        </script>
+        <![endif]-->
+    <!-- Le fav and touch icons -->
+    <!--link rel="shortcut icon" href="assets/ico/favicon.ico"-->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+    <style>
+    </style>
+  </head>
+  <body>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a href="/" class="brand"><img src="/assets/img/fifo-logo.png"></a>
+          <ul class="nav pull-right">
+            <li><a href="http://project-fifo.net/">Project FiFo</a></li>
+            <li><a href="http://jira.project-fifo.net/">Bugtracker</a></li>
+            <li><a href="https://github.com/project-fifo/docs" target="_blank">On Github</a></li>
+          </ul>
         </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="span3">
+          <ul id="menu" class="nav nav-list" data-spy="affix">
+            <li class="nav-header">General</li>
+            <li data-section="general/installation"><a href="/general/installation.html">Installation</a></li>
+            <li class="nav-header">Sniffle</li>
+            <li data-section="sniffle/configuration"><a href="/sniffle/configuration.html">Configuration</a></li>
+            <li data-section="sniffle/administration"><a href="/sniffle/administration.html">Administration</a></li>
+            <li class="nav-header">Snarl</li>
+            <li data-section="snarl/configuration"><a href="/snarl/configuration.html">Configuration</a></li>
+            <li data-section="snarl/administration"><a href="/snarl/administration.html">Administration</a></li>
+            <li class="nav-header">Howl</li>
+            <li data-section="howl/configuration"><a href="/howl/configuration.html">Configuration</a></li>
+            <li data-section="howl/administration"><a href="/howl/administration.html">Administration</a></li>
+            <li class="nav-header">Chunter</li>
+            <li data-section="chunter/installation"><a href="/chunter/installation.html">Installation</a></li>
+            <li data-section="chunter/configuration"><a href="/chunter/configuration.html">Configuration</a></li>
+            <li data-section="chunter/administration"><a href="/chunter/administration.html">Administration</a></li>
+          </ul>
+        </div>
+        <div class="span9">
+          {{content}}
+        </div>
+      </div>
+    </div>
 
-    </body>
+    <style>
+
+    </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js">
+    </script>
+    <script src="/assets/js/bootstrap.js">
+    </script>
+
+    <script>
+      $('#menu [data-section="{{page.section}}"]').addClass('active');
+    </script>
+
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-31493971-3']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
+  </body>
 </html>
