--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,9 +34,9 @@
         <div class="container">
           <a href="/" class="brand"><img src="/assets/img/fifo-logo.png"></a>
           <ul class="nav pull-right">
-            <li><a href="http://project-fifo.net/">Project FiFo</a></li>
-            <li><a href="http://jira.project-fifo.net/">Bugtracker</a></li>
-            <li><a href="https://github.com/project-fifo/docs" target="_blank">On Github</a></li>
+            <li><a href="https://jira.project-fifo.net/">Bugtracker</a></li>
+            <li><a href="https://project-fifo.net/">Wiki</a></li>
+            <li><a href="https://github.com/project-fifo/project-fifo.github.io" target="_blank">On Github</a></li>
           </ul>
         </div>
       </div>
