Improved installation manual.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,6 +60,9 @@
             <li class="nav-header">Howl</li>
             <li data-section="howl/configuration"><a href="/howl/configuration.html">Configuration</a></li>
             <li data-section="howl/administration"><a href="/howl/administration.html">Administration</a></li>
+            <li class="nav-header">Wiggle</li>
+            <li data-section="wiggle/configuration"><a href="/wiggle/configuration.html">Configuration</a></li>
+            <li data-section="wiggle/administration"><a href="/wiggle/administration.html">Administration</a></li>
             <li class="nav-header">Chunter</li>
             <li data-section="chunter/installation"><a href="/chunter/installation.html">Installation</a></li>
             <li data-section="chunter/configuration"><a href="/chunter/configuration.html">Configuration</a></li>
