--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a href="/" class="brand"><img src="/assets/img/fifo-logo.png"></a>
+          <a href="/" class="brand"><img src="/assets/img/fifo-logo.png" style="height:20px"></a>
           <ul class="nav pull-right">
             <li><a href="https://jira.project-fifo.net/">Bugtracker</a></li>
             <li><a href="https://project-fifo.net/">Wiki</a></li>
