--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -84,7 +84,7 @@ body {
     text-shadow: none;
 }
 #menu li.active a {
-    background-color: #33a5c8;
+    background-color: #205081;
     color: #fff;
 }
 
