Added jingles manual sections.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,6 +93,34 @@
             <li data-section="chunter/administration" data-category="chunter">
               <a href="/chunter/administration.html">Administration</a>
             </li>
+            <li class="nav-header" onclick="select('jingles')">Jingles</li>
+            <li data-section="jingles/installation" data-category="jingles">
+              <a href="/jingles/installation.html">Installation</a>
+            </li>
+            <li data-section="jingles/configuration" data-category="jingles">
+              <a href="/jingles/configuration.html">Configuration</a>
+            </li>
+            <li data-section="jingles/general" data-category="jingles">
+              <a href="/jingles/general.html">General</a>
+            </li>
+            <li data-section="jingles/machines" data-category="jingles">
+              <a href="/jingles/machines.html">Machines</a>
+            </li>
+            <li data-section="jingles/hypervisors" data-category="jingles">
+              <a href="/jingles/hypervisors.html">Hypervisors</a>
+            </li>
+            <li data-section="jingles/datasets" data-category="jingles">
+              <a href="/jingles/datasets.html">Datasets</a>
+            </li>
+            <li data-section="jingles/packages" data-category="jingles">
+              <a href="/jingles/packages.html">Packages</a>
+            </li>
+            <li data-section="jingles/networking" data-category="jingles">
+              <a href="/jingles/networking.html">Networking</a>
+            </li>
+            <li data-section="jingles/usermanagement" data-category="jingles">
+              <a href="/jingles/usermanagement.html">Usermanagement</a>
+            </li>
           </ul>
         </div>
         <div class="span9">
