--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
       <div class="row">
         <div class="span3">
           <ul id="menu" class="nav nav-list" data-spy="affix">
+            <!-- General -->
             <li class="nav-header" onclick="select('general')">General</li>
             <li data-section="general/welcome" data-category="general">
               <a href="/">Welcome</a>
@@ -55,6 +56,10 @@
             <li data-section="general/clustering" data-category="general">
               <a href="/general/clustering.html">Clustering</a>
             </li>
+            <li data-section="general/permissions" data-category="general">
+              <a href="/general/permissions.html">Permissions</a>
+            </li>
+            <!-- Sniffle -->
             <li class="nav-header" onclick="select('sniffle')">Sniffle</li>
             <li data-section="sniffle/configuration" data-category="sniffle">
               <a href="/sniffle/configuration.html">Configuration</a>
@@ -62,6 +67,10 @@
             <li data-section="sniffle/administration" data-category="sniffle">
               <a href="/sniffle/administration.html">Administration</a>
             </li>
+            <li data-section="sniffle/permissions" data-category="sniffle">
+              <a href="/sniffle/permissions.html">Permissions</a>
+            </li>
+            <!-- Snarl -->
             <li class="nav-header" onclick="select('snarl')">Snarl</li>
             <li data-section="snarl/configuration" data-category="snarl">
               <a href="/snarl/configuration.html">Configuration</a>
@@ -69,6 +78,10 @@
             <li data-section="snarl/administration" data-category="snarl">
               <a href="/snarl/administration.html">Administration</a>
             </li>
+            <li data-section="snarl/permissions" data-category="snarl">
+              <a href="/snarl/permissions.html">Permissions</a>
+            </li>
+            <!-- Howl -->
             <li class="nav-header" onclick="select('howl')">Howl</li>
             <li data-section="howl/configuration" data-category="howl">
               <a href="/howl/configuration.html">Configuration</a>
@@ -76,6 +89,10 @@
             <li data-section="howl/administration" data-category="howl">
               <a href="/howl/administration.html">Administration</a>
             </li>
+            <li data-section="howl/permissions" data-category="howl">
+              <a href="/howl/permissions.html">Permissions</a>
+            </li>
+            <!-- Wiggle -->
             <li class="nav-header" onclick="select('wiggle')">Wiggle</li>
             <li data-section="wiggle/configuration" data-category="wiggle">
               <a href="/wiggle/configuration.html">Configuration</a>
@@ -83,6 +100,7 @@
             <li data-section="wiggle/administration" data-category="wiggle">
               <a href="/wiggle/administration.html">Administration</a>
             </li>
+            <!-- Chunter -->
             <li class="nav-header" onclick="select('chunter')">Chunter</li>
             <li data-section="chunter/installation" data-category="chunter">
               <a href="/chunter/installation.html">Installation</a>
@@ -93,12 +111,16 @@
             <li data-section="chunter/administration" data-category="chunter">
               <a href="/chunter/administration.html">Administration</a>
             </li>
+            <!-- Jingles -->
             <li class="nav-header" onclick="select('jingles')">Jingles</li>
             <li data-section="jingles/configuration" data-category="jingles">
               <a href="/jingles/configuration.html">Configuration</a>
             </li>
             <li data-section="jingles/general" data-category="jingles">
               <a href="/jingles/general.html">General</a>
+            </li>
+            <li data-section="jingles/usermanagement" data-category="jingles">
+              <a href="/jingles/usermanagement.html">Usermanagement</a>
             </li>
             <li data-section="jingles/machines" data-category="jingles">
               <a href="/jingles/machines.html">Machines</a>
@@ -115,8 +137,8 @@
             <li data-section="jingles/networking" data-category="jingles">
               <a href="/jingles/networking.html">Networking</a>
             </li>
-            <li data-section="jingles/usermanagement" data-category="jingles">
-              <a href="/jingles/usermanagement.html">Usermanagement</a>
+            <li data-section="jingles/dtrace" data-category="jingles">
+              <a href="/jingles/dtrace.html">D-Trace</a>
             </li>
           </ul>
         </div>
