Added org description.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,6 +59,9 @@
             <li data-section="general/permissions" data-category="general">
               <a href="/general/permissions.html">Permissions</a>
             </li>
+            <li data-section="general/orgs" data-category="general">
+              <a href="/general/orgs.html">Organisations</a>
+            </li>
             <!-- Sniffle -->
             <li class="nav-header" onclick="select('sniffle')">Sniffle</li>
             <li data-section="sniffle/configuration" data-category="sniffle">
