Condensed rightmanagement section into one page.:

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,11 +56,8 @@
             <li data-section="general/clustering" data-category="general">
               <a href="/general/clustering.html">Clustering</a>
             </li>
-            <li data-section="general/permissions" data-category="general">
-              <a href="/general/permissions.html">Permissions</a>
-            </li>
-            <li data-section="general/orgs" data-category="general">
-              <a href="/general/orgs.html">Organisations</a>
+            <li data-section="general/rightmanagement" data-category="general">
+              <a href="/general/rightmanagement.html">Rightmanagement</a>
             </li>
             <!-- Sniffle -->
             <li class="nav-header" onclick="select('sniffle')">Sniffle</li>
