Added upgrade guide.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,9 @@
             <li data-section="general/installation" data-category="general">
               <a href="/general/installation.html">Installation</a>
             </li>
+            <li data-section="general/upgrade" data-category="general">
+              <a href="/general/upgrade.html">Upgrade</a>
+            </li>
             <li data-section="general/clustering" data-category="general">
               <a href="/general/clustering.html">Clustering</a>
             </li>
