--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,6 +62,9 @@
             <li data-section="general/rightmanagement" data-category="general">
               <a href="/general/rightmanagement.html">Rightmanagement</a>
             </li>
+            <li data-section="general/releasenotes" data-category="general">
+              <a href="/general/releasenotes.html">Release Notes</a>
+            </li>
             <!-- Sniffle -->
             <li class="nav-header" onclick="select('sniffle')">Sniffle</li>
             <li data-section="sniffle/configuration" data-category="sniffle">
