Added documentation for groupings.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -131,6 +131,9 @@
             <li data-section="jingles/machines" data-category="jingles">
               <a href="/jingles/machines.html">Machines</a>
             </li>
+            <li data-section="jingles/groupings" data-category="jingles">
+              <a href="/jingles/groupings.html">Stacks & Clusters</a>
+            </li>
             <li data-section="jingles/hypervisors" data-category="jingles">
               <a href="/jingles/hypervisors.html">Hypervisors</a>
             </li>
