--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -137,6 +137,9 @@
             <li data-section="jingles/hypervisors" data-category="jingles">
               <a href="/jingles/hypervisors.html">Hypervisors</a>
             </li>
+            <li data-section="jingles/topology" data-category="jingles">
+              <a href="/jingles/topology.html">Topology</a>
+            </li>
             <li data-section="jingles/datasets" data-category="jingles">
               <a href="/jingles/datasets.html">Datasets</a>
             </li>
